--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+
+
+.clip_path {
+    clip-path: polygon(0 0, 100% 0, 100% 84%, 50% 100%, 0 84%, 0% 50%);
+}
+.heading {
+    @apply text-[30px] md:text-[35px] lg:text-[45px] xl:text-[50px] uppercase font-bold text-gray-900 md:leading-[4rem] leading-[3rem] text-center
+}
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator{
+    filter:invert(1)
+}
+input[type='time']::-webkit-calendar-picker-indicator{
+    filter: invert(1);
+}
+input[type='time']::-webkit-calendar-picker-indicator::after{
+    filter: invert(1);
+}
